# sora-to-notion

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  chatgpt.py  img.py  main.py  models.py  notion.py  pyproject.toml  sora.py  test_util.py  util.py
.github/workflows/: test.yml
tests/: __init__.py  conftest.py  test_chatgpt.py  test_img.py  test_main.py  test_models.py  test_notion.py  test_sora.py  test_util.py
