[project]
name = "sora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.15.0",
    "tqdm>=4.67.3",
    "typer>=0.21.1",
]
[tool.ruff]
exclude = [".venv"]
