[project]
name = "sora"
version = "0.1.0"
description = "CLI tool for managing and backing up AI-generated images from Sora and ChatGPT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.15.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "typer>=0.21.1",
]

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["UP017"]  # timezone.utc is more compatible than datetime.UTC
